HTML ödev 2 düzenlendi

--- a/HTML ödev 2.html
+++ b/HTML ödev 2.html
@@ -11,7 +11,8 @@
 
 <!-- sevdiğim filmler, kitaplar icin link -->
 
-<h2>İlgi Alanlarım <ol>
+<h2>İlgi Alanlarım</h2> 
+<ol>
 
     <li>
         Film
@@ -57,7 +58,7 @@
             </li>
         </ul>
     </li>
-</ol></h2>
+</ol>
 
 <!-- sevdiğin bir filmin fotoğrafını koy -->
 
